--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-size: 1vw;
+    font-size: 0.9vw;
     font-family: 'Roboto', sans-serif;
     color: whitesmoke;
 }
@@ -31,7 +31,7 @@ html {
   }
   #top{
       width: 100%;
-      height: 700px;
+      height: 70vh;
     display: flex;
     position: relative;
   }
@@ -186,7 +186,39 @@ html {
     transform: scale(1.8);
   }
   #bot{
+    padding: 30px;
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 30vh;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  #dailyForecast{
+    margin-top: 25px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    gap: 20px;
+  }
+  .card{
+    display: flex;
+    flex-direction: column;
+    width: 10vw;
+    background-color: rgba(0, 0, 0, 0.45);
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+
+
+  }
+  .day{
+    margin-bottom: 20px;
+    font-weight: 800;
+  }
+
+  #dailyForecast{
+    display: flex;
+  }
+  .dailyIcon{
+    transform: scale(1.1);
   }
